testdata/baselines/reference/compiler/utf16TemplateLiteralInference.errors.txt
utf16TemplateLiteralInference.ts(5,7): error TS2322: Type 'A' is not assignable to type '["😀", "abc"]'.
  Type at position 0 in source is not compatible with type at position 0 in target.
    Type '"\uD83D"' is not assignable to type '"😀"'.


==== utf16TemplateLiteralInference.ts (1 errors) ====
    type Head<S> = S extends `${infer C}${string}` ? C : never;
    type Rest<S> = S extends `${string}${infer R}` ? R : never;
    type A = [Head<"😀abc">, Rest<"😀abc">];
    declare let a: A;
    const chk: ["😀", "abc"] = a;
          ~~~
!!! error TS2322: Type 'A' is not assignable to type '["😀", "abc"]'.
!!! error TS2322:   Type at position 0 in source is not compatible with type at position 0 in target.
!!! error TS2322:     Type '"\uD83D"' is not assignable to type '"😀"'.
    